[tool.poetry]
name = "replywithdotrecoded"
version = "0.1.0"
description = ""
authors = ["rian <therealbarryplayer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
py-mini-racer = "^0.2.0"
unidecode = "^1.1.1"
pydictionary = "^1.5.2"
wiktionaryparser = "^0.0.97"
ddg = "^0.2.2"
googletrans = "^3.0.0"
aiocometd = "^0.4.5"
json-store-client = "^1.1.0"
flask = "^1.1.2"
pyowm = "^3.0.0"
bs4 = "^0.0.1"
"discord.py" = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
